fix word wrapping in tagblock and dirtagblock and possibly other places

--- a/view/css/widgets.css
+++ b/view/css/widgets.css
@@ -13,6 +13,10 @@
 	border-bottom-right-radius: 0px;
 }
 
+.tags {
+	word-wrap: break-word;
+}
+
 /* suggest */
 
 .suggest-widget-more {
